--- a/style.css
+++ b/style.css
@@ -65,4 +65,24 @@ main{
     transition: 0.2s;
 }
 
+/* Online Courses */
+.card-footer img{
+    width: 18px;
+    height: 20px;
+}
+
+.card-footer{
+    border: none;
+    background-color: white;
+}
+
+.card-img-top{
+    padding: 20px;
+}
+
+.card{
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 0px 34px -15px rgba(0,0,0,0.59);
+}
 
