--- a/style.css
+++ b/style.css
@@ -1,13 +1,33 @@
-
-
 main{
     font-family: 'Poppins', sans-serif;
 }
 
+p{
+    font-size: 16px;
+    line-height: 30px;
+}
+
+a:link{
+    text-decoration: none;
+}
+
+li a{
+    color: white;
+}
+
+li a:hover{
+    background-color: #21B573;
+    color: white;
+    border-radius: 3px;
+}
+
+.nav-link{
+    font-size: 18px;
+}
+
+
 
 /* Custome Design  */
-
-
 .container{
     /* margin-bottom: 100px; */
 }
@@ -19,6 +39,13 @@ main{
 .title-heading{
     text-align: center;
     margin-bottom: 50px;
+    font-weight: bolder;
+    font-size: 40px;
+}
+
+.title-text{
+    font-size: 60px;
+    font-weight: bolder;
 }
 
 
@@ -76,7 +103,11 @@ main{
     border-radius: 10px;
     height: 270px;
     width: 270px;
-    
+}
+
+.item-1 h3:hover{
+    border: 3px solid #21B573;
+    border-radius: 10px;
 }
 
 .item-1:hover{
@@ -126,6 +157,7 @@ footer{
     height: auto;
     background-color: #282531;
     color: #fff;
+    
 }
 
 .copyright-bottom{
@@ -147,8 +179,19 @@ footer{
 }
 
 .footer-block{
-    padding: 120px 120px 50px 120px;
+    padding: 120px 120px 30px 120px;
+}
+
+.footer-underline{
+    
+    background-image: linear-gradient( to left, #21B573, aqua);
+    height: 2px;
 }
 
 
-
+/* email-input */
+.email-input{
+    border: none;
+    border-radius: 7px;
+    padding: 10px;
+}
