--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+
+/* Taib Islam Dipu : E-School Resources */
+
+
 main{
     font-family: 'Poppins', sans-serif;
 }
@@ -28,10 +33,6 @@ li a:hover{
 
 
 /* Custome Design  */
-.container{
-    /* margin-bottom: 100px; */
-}
-
 .content-block{
     margin-bottom: 100px;
 }
