--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 
 
+/* Taib Islam Dipu : E-School Resources */
+
+
 main{
     font-family: 'Poppins', sans-serif;
 }
@@ -30,10 +33,6 @@ li a:hover{
 
 
 /* Custome Design  */
-.container{
-    /* margin-bottom: 100px; */
-}
-
 .content-block{
     margin-bottom: 100px;
 }
@@ -93,11 +92,6 @@ li a:hover{
     padding-top: 100px;
 }
 
-.achievement img{
-    width: 100px;
-    padding: 15px;
-}
-
 .item-1{
     background-color: #F8FFFB;
     text-align: center;
@@ -147,11 +141,10 @@ li a:hover{
 .testimonial img{
     width: 120px;
     height: 120px;
-    margin-right: 10px;
 }
 
 .testimonial{
-    height: 300px;
+    height: 400px;
 }
 
 /* footer */
@@ -197,13 +190,3 @@ footer{
     border-radius: 7px;
     padding: 10px;
 }
-
-
-
-
-
-
-
-
-
-
